--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
-    "simple-git": "^3.28.0"
+    "simple-git": "^3.28.0",
+    "tar": "^7.5.2"
   },
   "optionalDependencies": {
     "@lydell/node-pty": "1.1.0",
